chore: Add automergeType and platformAutomerge options

--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,9 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["patch"],
-      "automerge": true
+      "automerge": true,
+      "automergeType": "pr",
+      "platformAutomerge": true
     }
   ]
 }
